started splitting code between files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Npuzzles)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Npuzzles src/main.cpp)
+add_executable(Npuzzles src/main.cpp src/BFS_solver.cpp src/BFS_solver.hpp)
